--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,18 @@
-/* Applies to the entire body of the HTML document (except where overridden by more specific
-selectors). */
 body {
   margin: 25px;
   background-color: rgb(240,240,240);
-  font-family: arial, sans-serif;
+  font-family: "Lucida Console", Monaco, monospace;
   font-size: 14px;
 }
 
-/* Applies to all <h1>...</h1> elements. */
 h1 {
   font-size: 35px;
-  font-weight: normal;
+  font-weight: bold;
   margin-top: 5px;
 }
 
-/* Applies to all elements with <... class="someclass"> specified. */
-.someclass { color: red; }
 
-/* Applies to the element with <... id="someid"> specified. */
-#someid { color: green; }
+.testing { color: red; }
+
+.star { color: yellow;
+        size: 80%;}
