--- a/styles.css
+++ b/styles.css
@@ -29,5 +29,4 @@ h1 {
        background:  rgba(158, 158, 158, 0.25);
        text-align: center;}
 #body p {color: #607D8B;
-margin: 2em;
-word-}
+margin: 2em;}
